--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_task">Add Task</string>
+    <string name="description">Description</string>
+    <string name="sortorder">Sortorder</string>
+    <string name="name">Name</string>
+    <string name="save">Save</string>
+    <string name="sortOrder_hint">order: sort low to high</string>
+    <string name="description_hint">Description (optional)</string>
+    <string name="name_hint">Name (required)</string>
 </resources>
