added Timings table and CurrentTiming view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Task Timer</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
@@ -29,9 +29,11 @@
     <string name="_1_0_0">1.0.0</string>
     <string name="copyright">Copyright © 2024</string>
     <string name="instructions_available_at_www_moa_com">Instructions available at www.moa.com</string>
-    <string name="for_support_contact_moazzamparwe40_gmail_com">For support, contact moazzamparwe40@gmail.com</string>
+    <string name="for_support_contact_moazzamparwe40_gmail_com">For support, contact moazzamparwez40@gmail.com</string>
     <string name="textview">TextView</string>
-    <string name="cancel_Button_text">CANCEL</string>
+    <string name="cancel_Button_text" tools:ignore="ButtonCase">CANCEL</string>
     <string name="ok_button_text">OK</string>
     <string name="settings">Settings</string>
+    <string name="no_task_selected">No Task Selected</string>
+    <string name="task_timing">Current Task Timing: %1$s</string>
 </resources>
