--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,8 @@
     <string name="settings">Settings</string>
     <string name="no_task_selected">No Task Selected</string>
     <string name="task_timing">Current Task Timing: %1$s</string>
+    <string name="task_name">Task name</string>
+    <string name="start_date">Start date</string>
+    <string name="duration">Duration</string>
+    <string name="task_description">Description</string>
 </resources>
